--- a/05_dom/one.html
+++ b/05_dom/one.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="bg-black">
-        <h1 id="title" class="heading">Dom learning on chai aur Code</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <h1 id="title" class="heading">Dom learning on chai aur Codes</h1>
+        <p style="color: black;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </div>
 </body>
 </html>
