--- a/05_dom/one.html
+++ b/05_dom/one.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Learning</title>
+    <style>
+    .bg-black{
+        background-color: black;
+        color: white;
+    }
+</style>
 </head>
 <body>
     <div class="bg-black">
-        <h1 id="title" class="heading">Dom learning on chai aur Codes</h1>
+        <h1 id="title" class="heading">Dom learning on chai aur Codes<span style="display: none;">test text</span>
+        </h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p style="color: black;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        <input type="password">
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
     </div>
 </body>
 </html>
