--- a/05_dom/one.html
+++ b/05_dom/one.html
@@ -21,9 +21,10 @@
         <p style="color: black;">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         <input type="password">
         <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
+            <li class="listItems">one</li>
+            <li class="listItems">two</li>
+            <li class="listItems">three</li>
+            <li class="listItems">four</li>
         </ul>
     </div>
 </body>
