--- a/Events.js/fiveProject.html
+++ b/Events.js/fiveProject.html
@@ -12,12 +12,5 @@
         </div>
     </div>
 </body>
-<script>
-    const insert=document.getElementById('insert')
-    Window.addEventListener('keydown',(e)=>{
-        insert.innerHTML=`
-        
-        `
-    })
-</script>
+<script src="connect.js"></script>
 </html>
